Basic Layout added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <section></section>
+        <section>
+            <article>
+                <div></div>
+                <div></div>
+            </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
+            <article>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
+        </section>
+    </main>
     <script src="app.js"></script>
 </body>
 </html>
