Calculator ui created

--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
 </head>
 <body>
     <main>
-        <section></section>
-        <section>
-            <article>
+        <section class="display">hello</section>
+        <section class="input-container">
+            <article class="input-btn">
                 <div></div>
                 <div></div>
             </article>
-            <article>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </article>
-            <article>
+            <article class="numbers">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </article>
-            <article>
+            <article class="numbers">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
             </article>
-            <article>
+            <article class="numbers">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </article>
+            <article class="numbers">
                 <div></div>
                 <div></div>
                 <div></div>
