Entire logic is changed

--- a/index.html
+++ b/index.html
@@ -8,35 +8,39 @@
 </head>
 <body>
     <main>
-        <section class="display">hello</section>
+        <section class="display">
+            <div class="previousContent">hi</div>
+            <div class="currentContent"></div>
+        </section>
         <section class="input-container">
             <article class="input-btn">
-                <div></div>
-                <div></div>
+                <button class="all-clear">Clear</button>
+                <button class="delete">Delete</button>
+                <button class="operation">%</button>
             </article>
-            <article class="numbers">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="number-wrap">
+                <button class="buttons numbers">7</button>
+                <button class="buttons numbers">8</button>
+                <button class="buttons numbers">9</button>
+                <button class="operation">/</button>
             </article>
-            <article class="numbers">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="number-wrap">
+                <button class="buttons numbers">4</button>
+                <button class="buttons numbers">5</button>
+                <button class="buttons numbers">6</button>
+                <button class="operation">*</button>
             </article>
-            <article class="numbers">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="number-wrap">
+                <button class="buttons numbers">1</button>
+                <button class="buttons numbers">2</button>
+                <button class="buttons numbers">3</button>
+                <button class="operation">-</button>
             </article>
-            <article class="numbers">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <article class="number-wrap">
+                <button class="buttons numbers">0</button>
+                <button class="buttons numbers">.</button>
+                <button class="equals">=</button>
+                <button class="operation">+</button>
             </article>
         </section>
     </main>
