Calculation are working when equal sign is clicked

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section class="display">
-            <div class="previousContent">hi</div>
+            <div class="previousContent"></div>
             <div class="currentContent"></div>
         </section>
         <section class="input-container">
