Pointer Bug fixed result is rounded to show float values

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </article>
             <article class="number-wrap">
                 <button class="buttons numbers">0</button>
-                <button class="buttons numbers">.</button>
+                <button class="buttons point">.</button>
                 <button class="equals">=</button>
                 <button class="operation">+</button>
             </article>
