--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
             <article class="input-btn">
                 <button class="all-clear">Clear</button>
                 <button class="delete">Delete</button>
-                <button class="operation">%</button>
+                <button class="operation" id="operators">%</button>
             </article>
             <article class="number-wrap">
                 <button class="buttons numbers">7</button>
                 <button class="buttons numbers">8</button>
                 <button class="buttons numbers">9</button>
-                <button class="operation">/</button>
+                <button class="operation" id="operators">/</button>
             </article>
             <article class="number-wrap">
                 <button class="buttons numbers">4</button>
                 <button class="buttons numbers">5</button>
                 <button class="buttons numbers">6</button>
-                <button class="operation">*</button>
+                <button class="operation" id="operators">*</button>
             </article>
             <article class="number-wrap">
                 <button class="buttons numbers">1</button>
                 <button class="buttons numbers">2</button>
                 <button class="buttons numbers">3</button>
-                <button class="operation">-</button>
+                <button class="operation" id="operators">-</button>
             </article>
             <article class="number-wrap">
                 <button class="buttons numbers">0</button>
                 <button class="buttons point">.</button>
                 <button class="equals">=</button>
-                <button class="operation">+</button>
+                <button class="operation" id="operators">+</button>
             </article>
         </section>
     </main>
